asteria/core/tests/errors/elaboration_errors/incorrect_type_for_synthesized_term.asteriacore
data A;;
data B;;

x : Test$A() = Test$x;;

y : Test$B() = Test$x;;
